--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,7 +8,8 @@ on:
     branches:
       - main
   release:
-    types: [created]
+    types:
+      - published
 
 jobs:
   test:
@@ -31,14 +32,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Run tests (if you add tests)
+      # Step 4: Run tests
       - name: Run tests
         run: |
-          # Add your test commands (e.g., pytest)
-          echo "No tests defined yet. Add your test commands here."
+          echo "Running tests (add your test commands)"
+          # Example: pytest tests/
+          echo "Tests completed."
 
   publish:
-    if: github.event_name == 'release'
+    if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
 
     steps:
