--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,8 +8,7 @@ on:
     branches:
       - main
   release:
-    types:
-      - published
+    types: [created]
 
 jobs:
   test:
@@ -32,15 +31,17 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Run tests
+      # Step 4: Run tests (if you add tests)
       - name: Run tests
         run: |
-          echo "Running tests (add your test commands)"
-          # Example: pytest tests/
-          echo "Tests completed."
+          if [ -f pytest.ini ] || [ -d tests ]; then
+            pytest --maxfail=5 --disable-warnings
+          else
+            echo "No tests defined yet. Add your test commands here."
+          fi
 
   publish:
-    if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/')
+    if: github.event_name == 'release'
     runs-on: ubuntu-latest
 
     steps:
@@ -58,11 +59,11 @@ jobs:
       - name: Install build tools
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+          pip install build twine
 
       # Step 4: Build the package
       - name: Build package
-        run: python setup.py sdist bdist_wheel
+        run: python -m build
 
       # Step 5: Publish to PyPI
       - name: Publish to PyPI
