--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,69 +1,38 @@
-name: Python Package CI and Publish
+name: Python Package Publish
 
 on:
   workflow_dispatch:
   push:
     branches:
       - main
-  schedule:
-    - cron: "0 0 1 1,7 *"  # Runs every Jan 1st and July 1st
 
 permissions:
+  id-token: write  # Needed for Trusted Publishing
   contents: read
-  packages: write
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.9"
+          python-version: '3.10'
 
-      # Step 3: Install build tools and dependencies
       - name: Install build tools
-        run: python -m pip install --upgrade pip setuptools wheel twine requests
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install build
 
-      # Step 4: Clean previous build artifacts
-      - name: Remove old build artifacts
+      - name: Clean previous builds
         run: rm -rf dist build *.egg-info
 
-      # Step 5: Build the package
-      - name: Build the package
-        run: |
-          python setup.py sdist bdist_wheel
+      - name: Build package
+        run: python -m build
 
-      # Step 6: Check if version exists on PyPI
-      - name: Check if version exists on PyPI
-        id: check-version
-        run: |
-          PACKAGE_NAME="social-media-downloader"
-          VERSION=$(python setup.py --version)
-          URL="https://pypi.org/project/${PACKAGE_NAME}/${VERSION}/"
-          echo "Checking for existing version at: $URL"
-          STATUS_CODE=$(curl -o /dev/null -s -w "%{http_code}" "$URL")
-
-          echo "Received HTTP status code: $STATUS_CODE"
-          if [ "$STATUS_CODE" -eq 200 ]; then
-            echo "The version $VERSION already exists on PyPI. Skipping upload."
-            echo "upload_required=false" >> $GITHUB_ENV
-          else
-            echo "Version $VERSION is not published. Proceeding to upload."
-            echo "upload_required=true" >> $GITHUB_ENV
-          fi
-
-      # Step 7: Publish to PyPI
-      - name: Publish to PyPI
-        if: env.upload_required == 'true'
-        env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-        run: |
-          python -m twine upload dist/*
+      - name: Publish package to PyPI (Trusted Publishing)
+        uses: pypa/gh-action-pypi-publish@release/v1
