--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Clean previous builds
+        run: |
+          rm -rf dist build *.egg-info
+
       - name: Install build tools
         run: |
           python -m pip install --upgrade pip
