--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -1,8 +1,6 @@
 name: Update Page Download Links
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -32,8 +30,8 @@ jobs:
 
       - name: Commit and push changes to main
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/index.html
           git commit -m "Update download links to version ${{ steps.get_version.outputs.version }}" || echo "No changes to commit"
           git push origin main
