--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -34,15 +34,15 @@ jobs:
         run: |
           VERSION="${{ steps.get_version.outputs.version }}"
 
-          # Update the download links in docs/index.html
-          sed -i "s|https://github.com/nayandas69/Social-Media-Downloader/releases/download/.*/Social.Media.Downloader.exe|https://github.com/nayandas69/Social-Media-Downloader/releases/download/${VERSION}/Social.Media.Downloader.exe|g" docs/index.html
-          sed -i "s|https://github.com/nayandas69/Social-Media-Downloader/releases/download/.*/smd-linux.tar.gz|https://github.com/nayandas69/Social-Media-Downloader/releases/download/${VERSION}/smd-linux.tar.gz|g" docs/index.html
-          sed -i "s|https://github.com/nayandas69/Social-Media-Downloader/releases/download/.*/social-media-downloader_.*_amd64.deb|https://github.com/nayandas69/Social-Media-Downloader/releases/download/${VERSION}/social-media-downloader_${VERSION}_amd64.deb|g" docs/index.html
+          # Update the download links in index.html
+          sed -i "s|https://github.com/nayandas69/Social-Media-Downloader/releases/download/.*/Social.Media.Downloader.exe|https://github.com/nayandas69/Social-Media-Downloader/releases/download/${VERSION}/Social.Media.Downloader.exe|g" index.html
+          sed -i "s|https://github.com/nayandas69/Social-Media-Downloader/releases/download/.*/smd-linux.tar.gz|https://github.com/nayandas69/Social-Media-Downloader/releases/download/${VERSION}/smd-linux.tar.gz|g" index.html
+          sed -i "s|https://github.com/nayandas69/Social-Media-Downloader/releases/download/.*/social-media-downloader_.*_amd64.deb|https://github.com/nayandas69/Social-Media-Downloader/releases/download/${VERSION}/social-media-downloader_${VERSION}_amd64.deb|g" index.html
 
       - name: Commit and push changes to main
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/index.html
+          git add index.html
           git commit -m "Update download links to version ${{ steps.get_version.outputs.version }}" || echo "No changes to commit"
           git push origin main
