--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.10
+          python-version: 3.x
 
       - name: Get version from pyproject.toml
         id: get_version
