--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -24,7 +24,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mkdir -p docs
-          touch docs/CONTRIBUTORS.md
+          touch CONTRIBUTORS.md
 
           AUTHOR="nayandas69"
 
@@ -33,51 +33,51 @@ jobs:
             https://api.github.com/repos/${{ github.repository }}/contributors | jq -r '.[].login')
 
           # Prepare sections
-          echo "# Contributors" > docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "This project exists thanks to the contributions of the following individuals:" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
+          echo "# Contributors" > CONTRIBUTORS.md
+          echo "" >> CONTRIBUTORS.md
+          echo "This project exists thanks to the contributions of the following individuals:" >> CONTRIBUTORS.md
+          echo "" >> CONTRIBUTORS.md
 
-          echo "## Author" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "- [**$AUTHOR**](https://github.com/$AUTHOR) — Author and Maintainer" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
+          echo "## Author" >> CONTRIBUTORS.md
+          echo "" >> CONTRIBUTORS.md
+          echo "- [**$AUTHOR**](https://github.com/$AUTHOR) — Author and Maintainer" >> CONTRIBUTORS.md
+          echo "" >> CONTRIBUTORS.md
 
-          echo "## Contributors" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
+          echo "## Contributors" >> CONTRIBUTORS.md
+          echo "" >> CONTRIBUTORS.md
 
           for USER in $CONTRIBUTORS; do
             if [[ "$USER" != "$AUTHOR" && "$USER" != *"[bot]"* ]]; then
-              echo "- [**$USER**](https://github.com/$USER)" >> docs/CONTRIBUTORS.md
+              echo "- [**$USER**](https://github.com/$USER)" >> CONTRIBUTORS.md
             fi
           done
 
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "## Bot Contributors" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
+          echo "" >> CONTRIBUTORS.md
+          echo "## Bot Contributors" >> CONTRIBUTORS.md
+          echo "" >> CONTRIBUTORS.md
 
           for USER in $CONTRIBUTORS; do
             if [[ "$USER" == *"[bot]"* ]]; then
-              echo "- [**$USER**](https://github.com/$USER)" >> docs/CONTRIBUTORS.md
+              echo "- [**$USER**](https://github.com/$USER)" >> CONTRIBUTORS.md
             fi
           done
 
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "---" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "We sincerely appreciate your efforts in making this project better." >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "If you contributed and don’t see your name here, feel free to open a pull request to add yourself!" >> docs/CONTRIBUTORS.md
+          echo "" >> CONTRIBUTORS.md
+          echo "---" >> CONTRIBUTORS.md
+          echo "" >> CONTRIBUTORS.md
+          echo "We sincerely appreciate your efforts in making this project better." >> CONTRIBUTORS.md
+          echo "" >> CONTRIBUTORS.md
+          echo "If you contributed and don’t see your name here, feel free to open a pull request to add yourself!" >> CONTRIBUTORS.md
 
       - name: Commit updated CONTRIBUTORS.md if changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          if git diff --quiet docs/CONTRIBUTORS.md; then
+          if git diff --quiet CONTRIBUTORS.md; then
             echo "No changes to CONTRIBUTORS.md"
           else
-            git add docs/CONTRIBUTORS.md
+            git add CONTRIBUTORS.md
             git commit -m "Auto-update CONTRIBUTORS.md with new contributors"
             git push origin main
           fi
