--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -2,8 +2,8 @@ name: Update Contributors
 
 on:
   workflow_dispatch:
-  push:
-    branches: [main]
+  schedule:
+    - cron: '0 0 * * 0'
 
 permissions:
   contents: write
