--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - dev
     paths:
       - pyproject.toml
 
@@ -39,10 +39,10 @@ jobs:
           sed -i "s|https://github.com/nayandas69/Social-Media-Downloader/releases/download/.*/smd-linux.tar.gz|https://github.com/nayandas69/Social-Media-Downloader/releases/download/${VERSION}/smd-linux.tar.gz|g" index.html
           sed -i "s|https://github.com/nayandas69/Social-Media-Downloader/releases/download/.*/social-media-downloader_.*_amd64.deb|https://github.com/nayandas69/Social-Media-Downloader/releases/download/${VERSION}/social-media-downloader_${VERSION}_amd64.deb|g" index.html
 
-      - name: Commit and push changes to main
+      - name: Commit and push changes to dev
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add index.html
           git commit -m "Update download links to version ${{ steps.get_version.outputs.version }}" || echo "No changes to commit"
-          git push origin main
+          git push origin dev
