Update version to 1.1.7 and adjust file paths in workflows

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,7 +3,7 @@ name: Build and Publish to PyPI
 on:
   push:
     paths:
-      - 'downloader.py'
+      - 'smd/downloader.py'
     branches:
       - main  # Runs on every push to main
 
