--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "social-media-downloader"
-version = "1.1.6"
+version = "1.1.7"
 description = "A command-line tool to download videos from various social media platforms like YouTube, TikTok, Facebook, Instagram, X & more. It supports instagram batch downloads, format selection, and maintains a download history."
 readme = "README.md"
 requires-python = ">=3.6"
@@ -54,8 +54,8 @@ dev = [
 ]
 
 [project.scripts]
-social-media-downloader = "downloader:main"
-smd = "downloader:main"
+smd = "smd.downloader:main"
+social-media-downloader = "smd.downloader:main"
 
 [project.urls]
 "Source Code" = "https://github.com/nayandas69/Social-Media-Downloader"
