--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ env/
 __pycache__/
 *.py[cod]
 
+# MkDocs build output
+site/
+
+# IDE settings
+.idea/
+
 # Ignore IDE configuration files
 .vscode/
 
