--- a/.github/workflows/update-archive.yml
+++ b/.github/workflows/update-archive.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Generate archive.md
         run: |
-          python archive/generate_archive.py
+          python docs/generate_archive.py
 
       - name: Commit and push changes
         run: |
