Refactor contributor and license documentation; update workflow to conditionally commit changes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,8 +60,10 @@ nav:
       - Changelog: changelog.md
   - Development:
       - Roadmap: roadmap.md
-  - Contribute: contribute.md
-  - License: license.md
+  - Contribute:
+      - Contribute: contribute.md
+      - contributors: contributors.md
+  - License: license-info.md
 
 markdown_extensions:
   - admonition
