--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Ensure jq is installed
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Update docs/CONTRIBUTORS.md
+      - name: Update docs/CONTRIBUTORS.md (only if changed)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -27,57 +27,64 @@ jobs:
           touch docs/CONTRIBUTORS.md
 
           AUTHOR="nayandas69"
+          TEMP_FILE=$(mktemp)
 
-          # Fetch contributors
+          # Fetch contributors list
           CONTRIBUTORS=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
             https://api.github.com/repos/${{ github.repository }}/contributors | jq -r '.[].login')
 
-          # Prepare sections
-          echo "# Contributors" > docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "This project exists thanks to the contributions of the following individuals:" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
+          # Generate new content into temp file
+          {
+            echo "# Contributors"
+            echo ""
+            echo "This project exists thanks to the contributions of the following individuals:"
+            echo ""
+            echo "## Author"
+            echo ""
+            echo "- [**$AUTHOR**](https://github.com/$AUTHOR) — Author and devtainer"
+            echo ""
+            echo "## Contributors"
+            echo ""
 
-          echo "## Author" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "- [**$AUTHOR**](https://github.com/$AUTHOR) — Author and devtainer" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
+            for USER in $CONTRIBUTORS; do
+              if [[ "$USER" != "$AUTHOR" && "$USER" != *"[bot]"* ]]; then
+                echo "- [**$USER**](https://github.com/$USER)"
+              fi
+            done
 
-          echo "## Contributors" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
+            echo ""
+            echo "## Bot Contributors"
+            echo ""
 
-          for USER in $CONTRIBUTORS; do
-            if [[ "$USER" != "$AUTHOR" && "$USER" != *"[bot]"* ]]; then
-              echo "- [**$USER**](https://github.com/$USER)" >> docs/CONTRIBUTORS.md
-            fi
-          done
+            for USER in $CONTRIBUTORS; do
+              if [[ "$USER" == *"[bot]"* ]]; then
+                echo "- [**$USER**](https://github.com/$USER)"
+              fi
+            done
 
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "## Bot Contributors" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
+            echo ""
+            echo "---"
+            echo ""
+            echo "We sincerely appreciate your efforts in making this project better."
+            echo ""
+            echo "If you contributed and don’t see your name here, feel free to open a pull request to add yourself!"
+          } > "$TEMP_FILE"
 
-          for USER in $CONTRIBUTORS; do
-            if [[ "$USER" == *"[bot]"* ]]; then
-              echo "- [**$USER**](https://github.com/$USER)" >> docs/CONTRIBUTORS.md
-            fi
-          done
-
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "---" >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "We sincerely appreciate your efforts in making this project better." >> docs/CONTRIBUTORS.md
-          echo "" >> docs/CONTRIBUTORS.md
-          echo "If you contributed and don’t see your name here, feel free to open a pull request to add yourself!" >> docs/CONTRIBUTORS.md
+          # Compare and overwrite only if content differs
+          if cmp -s "$TEMP_FILE" docs/CONTRIBUTORS.md; then
+            echo "Contributors list is already up to date. Skipping commit."
+            echo "skip_commit=true" >> $GITHUB_ENV
+          else
+            cp "$TEMP_FILE" docs/CONTRIBUTORS.md
+            echo "Contributors list updated."
+            echo "skip_commit=false" >> $GITHUB_ENV
+          fi
 
       - name: Commit updated docs/CONTRIBUTORS.md if changed
+        if: env.skip_commit == 'false'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          if git diff --quiet docs/CONTRIBUTORS.md; then
-            echo "No changes to docs/CONTRIBUTORS.md"
-          else
-            git add docs/CONTRIBUTORS.md
-            git commit -m "Auto-update docs/CONTRIBUTORS.md with new contributors"
-            git push origin dev
-          fi
+          git add docs/CONTRIBUTORS.md
+          git commit -m "Auto-update docs/CONTRIBUTORS.md with new contributors"
+          git push origin dev
