--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -36,7 +36,7 @@ jobs:
           while :
           do
             PRS=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
-              "https://api.github.com/repos/${{ github.repository }}/pulls?state=closed&per_page=100&page=$PAGE")
+              "https://api.github.com/repos/${{ github.repository }}/pulls?state=all&per_page=100&page=$PAGE")
 
             COUNT=$(echo "$PRS" | jq length)
             if [ "$COUNT" -eq 0 ]; then break; fi
